--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Eclipse files
+RemoteSystemsTempFiles/
+.metadata/
+.settings/
+.cproject
+.project
