--- a/file-system/.vscode/launch.json
+++ b/file-system/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "program": "${workspaceFolder}/bin/${workspaceFolderBasename}.out",
       "args": [
-        // TODO: Agregar los argumentos que se necesiten
+        "./config/filesystem.config"
       ],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
