--- a/file-system/.vscode/launch.json
+++ b/file-system/.vscode/launch.json
@@ -26,6 +26,29 @@
       ],
       "preLaunchTask": "build"
     },
+    // #region run
+    {
+      "name": "memcheck",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/bin/${workspaceFolderBasename}.out",
+      "args": [
+        "./config/filesystem.config"
+      ],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ],
+      "preLaunchTask": "valgrind"
+    },
     // #endregion run
     {
       "name": "test",
