--- a/kernel/.vscode/tasks.json
+++ b/kernel/.vscode/tasks.json
@@ -14,6 +14,17 @@
       },
       "problemMatcher": ["$gcc"]
     },
+    // #region build
+    {
+      "label": "valgrind",
+      "command": "make memcheck",
+      "type": "shell",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": ["$gcc"]
+    },
     // #endregion build
     {
       "label": "clean",
