--- a/memory/config/memory.config
+++ b/memory/config/memory.config
@@ -1,3 +1,7 @@
 PUERTO_ESCUCHA=8002
 IP_FILESYSTEM=127.0.0.1
-VALOR=HOLA
+TAM_MEMORIA=4096
+TAM_PAGINA=16
+PATH_INSTRUCCIONES=../instruct_pseudo
+RETARDO_RESPUESTA=1000
+ALGORITMO_REEMPLAZO=FIFO
