--- a/file-system/config/filesystem.config
+++ b/file-system/config/filesystem.config
@@ -1,11 +1,11 @@
 IP_MEMORIA=127.0.0.1
 PUERTO_MEMORIA=8002
 PUERTO_ESCUCHA=8003
-PATH_FAT=/home/damo/utn/operativos/tp-2023-2c-SisOp-TEFB/file-system/fat.dat
-PATH_BLOQUES=/home/damo/utn/operativos/tp-2023-2c-SisOp-TEFB/file-system/bloques.dat
-PATH_FCB=/home/damo/utn/operativos/tp-2023-2c-SisOp-TEFB/file-system/fcbs
-CANT_BLOQUES_TOTAL=1024
-CANT_BLOQUES_SWAP=64
-TAM_BLOQUE=1024
+PATH_FAT=./fat.dat
+PATH_BLOQUES=./bloques.dat
+PATH_FCB=./fcbs
+CANT_BLOQUES_TOTAL=8192
+CANT_BLOQUES_SWAP=1024
+TAM_BLOQUE=32
 RETARDO_ACCESO_BLOQUE=2500
 RETARDO_ACCESO_FAT=500
