carga la pagina

--- a/memory/config/memory.config
+++ b/memory/config/memory.config
@@ -4,4 +4,4 @@ TAM_MEMORIA=1024
 TAM_PAGINA=32
 PATH_INSTRUCCIONES=../instruct_pseudo
 RETARDO_RESPUESTA=1000
-ALGORITMO_REEMPLAZO=LRU
+ALGORITMO_REEMPLAZO=FIFO
